<resources>
    <string name="app_name">CommCareToolkit</string>
    <string name="display_name">CommCare Toolkit</string>
    <string name="home_explanation">Welcome to the CommCare Toolkit! This application provides several utilities to aid you in successfully creating and using your own CommCare app. To get started, try out any of the utilities below.</string>
    <string name="action_settings">Settings</string>
    <string name="image_sizing_explanation">Use the resizable bounding box below to get a feel for how your images will look at different sizes. To resize the box, click on the bottom right-hand corner and drag. When it looks about the size you want your image to appear, make note of the dimensions and resize your image file to match.</string>
    <string name="image_sizing_explanation_abbrev">Use the resizable bounding box below to...</string>
    <string name="aspect_ratio_text">Aspect Ratio Lock</string>
    <string name="clear_aspect_ratio_text">Clear Aspect Ratio</string>
    <string name="width_label">width: </string>
    <string name="height_label">height: </string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="aspect_ratio_invalid_error">The dimensions you provided are either too small to show well on this screen, or represent an aspect ratio that does not show well on this screen.</string>
    <string name="values_not_entered_error">Please enter a value for both dimensions</string>
    <string name="device_model_label">Device Model</string>
    <string name="android_version_label">Android Version</string>
    <string name="api_level_label">Android API Level</string>
    <string name="screen_dimensions_label">Screen Dimensions</string>
    <string name="density_class_label">Screen Density Class</string>
    <string name="dpi_numeric_label">Device DPI</string>
    <string name="refresh_build_explanation_pt1">This utility is intended to improve the workflow for app-builders who are testing incremental changes to a form. Launching this action will trigger the following sequence of events in your app:</string>
    <string name="refresh_build_explanation_pt2">1. Save the current session, including any form entry progress.\n\n  2. Update to the latest build.\n\n  3. If the update is successful, log back in as the last user, and then restore the saved session.</string>
    <string name="trigger_refresh_text">Trigger Refresh</string>
    <string name="supporting_apps_explanation">Below is a list of other apps that are useful when using CommCare. Click on the name of an app below to view the download page for the app on the Google Play Store.</string>
    <string name="supporting_apps_unavailable">This utility cannot be used on your device because it requires the Google Play Store to be available.</string>
    <string name="more_coming_string">More utilities will be available soon! Check back for updates.</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_title">CommCare Toolkit Settings</string>

    <string-array name="target_apk_labels">
        <item>CommCare</item>
        <item>CommCare LTS</item>
        <item>CommCare Debug</item>
    </string-array>
    <string-array name="target_apk_values">
        <item>org.commcare.dalvik</item>
        <item>org.commcare.lts</item>
        <item>org.commcare.dalvik.debug</item>
    </string-array>
</resources>
