<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacer_double"
        android:divider="@color/cc_brand_bg"
        android:stretchColumns="1">

        <TableRow style="@style/DeviceInfoRow">
            <TextView
                style="@style/DeviceInfoTitle"
                android:text="@string/device_model_label" />
            <TextView
                style="@style/DeviceInfoValue"
                android:id="@+id/device_model_value"/>
        </TableRow>

        <TableRow style="@style/DeviceInfoRow">
            <TextView
                style="@style/DeviceInfoTitle"
                android:text="@string/android_version_label" />
            <TextView
                style="@style/DeviceInfoValue"
                android:id="@+id/android_version_value" />
        </TableRow>

        <TableRow style="@style/DeviceInfoRow">
            <TextView
                style="@style/DeviceInfoTitle"
                android:text="@string/api_level_label" />
            <TextView
                style="@style/DeviceInfoValue"
                android:id="@+id/api_level_value" />
        </TableRow>

        <TableRow style="@style/DeviceInfoRow">
            <TextView
                style="@style/DeviceInfoTitle"
                android:text="@string/screen_dimensions_label" />
            <TextView
                style="@style/DeviceInfoValue"
                android:id="@+id/screen_dimensions_value" />
        </TableRow>

        <TableRow style="@style/DeviceInfoRow">
            <TextView
                style="@style/DeviceInfoTitle"
                android:text="@string/density_label" />
            <TextView
                style="@style/DeviceInfoValue"
                android:id="@+id/density_value" />
        </TableRow>

    </TableLayout>

</LinearLayout>
