<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacer_double" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/width_info_container"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/width_label" />

        <EditText
            android:id="@+id/user_provided_width"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/height_info_container"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/width_info_container"
        android:layout_marginBottom="@dimen/standard_spacer" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/height_label" />

        <EditText
            android:id="@+id/user_provided_height"
            android:layout_width="80dp"
            android:inputType="number"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_message"
        android:layout_below="@id/height_info_container"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cc_attention_negative_color"
        android:layout_marginBottom="@dimen/standard_spacer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_holder"
        android:layout_below="@id/error_message"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/min_button_height"
            android:id="@+id/cancel_button"
            android:gravity="center"
            android:text="@string/button_cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/min_button_height"
            android:id="@+id/ok_button"
            android:gravity="center"
            android:text="@string/button_ok" />

    </LinearLayout>


</RelativeLayout>